# codegraph-core

./: .gitignore  ARCHITECTURE.md  CHA_README.md  CHA_USAGE.md  CPP_ANALYZER_README.md  Cargo.toml  HTTP_API_REFACTOR.md  HTTP_SERVICE_README.md  INCREMENTAL_BUILD.md  Makefile  PYTHON_ANALYZER_README.md  Planning.md  README.md  README_ANALYZER_V2.md  README_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  REPOSITORY_ANALYSIS_README.md  RUST_ANALYZER_README.md  example_calculator.java  planning.md  test_javascript.js  test_python.py  test_rust.rs  test_typescript.ts
.codegraph_cache/601c7b23b5f9fad53d734d561efd4bc2/: graph.json
docs/: hierarchical_graph_api.md  java_parser_guide.md
examples/: README.md  cpp_analysis_example.rs  debug_test.rs  http_incremental_test.rs  incremental_demo.rs  java_analysis_example.rs  md5_test.rs  rust_analyzer_demo.rs  simple_rust.rs  test_java_parser  test_java_parser.rs  test_java_queries.rs  test_javascript_analyzer.rs  test_python_analyzer.rs  test_typescript_analyzer.rs
grammar/: cpp.grammar.js  go.grammar.js  java.grammar.js  javascript.grammar.js  python.grammar.js  rust.grammar.js
scripts/: demo_hierarchical_output.py  test_hierarchical_api.py  test_http_endpoints.py
src/: lib.rs  main.rs
src/cli/: analyze.rs  args.rs  mod.rs  (+2 more)
test_output/: graph.dot  graph.json  graph.mmd
tests/: README.md  TEST_SUMMARY.md  cursorpool-1.0.6.vsix  test_cpp_analyzer.rs  test_functional.rs  test_integration.rs  test_java_analyzer.rs  test_javascript_analyzer.rs  test_python_analyzer.rs  test_rust_analyzer.rs  test_typescript_analyzer.rs
(+98 files in other folders)
