[package]
name = "codegraph-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for codegraph
petgraph = { version = "0.6", features = ["serde-1"] }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# HTTP service dependencies
axum = "0.7"
tokio = { version = "1.43", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# File processing dependencies
md5 = "0.7"
notify = "6.1"

# AST parsing dependencies (copied from original project)
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

# Additional dependencies for treesitter functionality
ropey = "1.6"
regex = "1.9"
glob = "0.3"
walkdir = "2.4"
async-trait = "0.1"
dyn_partial_eq = "0.1"
parking_lot = "0.12"
itertools = "0.14"
similar = "2.3"
typetag = "0.2"

# Error handling and utilities
anyhow = "1.0"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.8"